unpackaged/main/default/objects/BU_Usage__c/BU_Usage__c.object-meta.xml
<CustomObject>
    <label>BU Usage</label>
    <nameField>
        <label>BU Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BU Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>