unpackaged/main/default/objects/BU_Usage__c/fields/Actual_Units__c.field-meta.xml
<CustomField>
    <fullName>Actual_Units__c</fullName>
    <label>Actual Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>