unpackaged/main/default/objects/BU_Usage__c/fields/Billing_Model__c.field-meta.xml
<CustomField>
    <fullName>Billing_Model__c</fullName>
    <label>Billing Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Usage_Billing_Models</valueSetName>
    </valueSet>
</CustomField>