unpackaged/main/default/objects/BU_Usage__c/fields/External_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>External_Use_Case__c</fullName>
    <label>External: Use Case</label>
    <length>80</length>
    <type>Text</type>
</CustomField>