unpackaged/main/default/objects/BU_Usage__c/fields/Unlimited_Units__c.field-meta.xml
<CustomField>
    <fullName>Unlimited_Units__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unlimited Units?</label>
    <type>Checkbox</type>
</CustomField>