unpackaged/main/default/objects/BU_Usage__c/fields/User_Apps_Max_Billable_Apps__c.field-meta.xml
<CustomField>
    <fullName>User_Apps_Max_Billable_Apps__c</fullName>
    <label>User-Apps: Max Billable Apps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>